// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CouponList component should renders applied list 1`] = `
<StyledComponent
  className="applied_coupon"
  couponList={
    Immutable.List [
      Object {
        "details": null,
        "detailsOpen": false,
        "effectiveDate": "8/6/19",
        "error": null,
        "expirationDate": "8/10/19",
        "expirationDateTimeStamp": "2019-08-11T18:29:00.001Z",
        "id": "Y00105575",
        "isExpiring": true,
        "isStarted": true,
        "legalText": "$10 OFF On $60",
        "promotionType": "public",
        "status": "available",
        "title": "$10 OFF On $50",
      },
      Object {
        "details": null,
        "detailsOpen": false,
        "effectiveDate": "8/6/19",
        "error": null,
        "expirationDate": "8/10/19",
        "expirationDateTimeStamp": "2019-08-12T18:29:00.001Z",
        "id": "Y00105578",
        "isExpiring": true,
        "isStarted": true,
        "legalText": "$10 OFF On $70",
        "promotionType": "public",
        "status": "available",
        "title": "$20 OFF On $50",
      },
      Object {
        "details": null,
        "detailsOpen": false,
        "effectiveDate": "8/6/19",
        "error": null,
        "expirationDate": "8/10/19",
        "expirationDateTimeStamp": "2019-08-13T18:29:00.001Z",
        "id": "Y00105575",
        "isExpiring": true,
        "isStarted": true,
        "legalText": "$10 OFF On $80",
        "promotionType": "public",
        "status": "available",
        "title": "$30 OFF On $50",
      },
      Object {
        "details": null,
        "detailsOpen": false,
        "effectiveDate": "8/6/19",
        "error": null,
        "expirationDate": "8/10/19",
        "expirationDateTimeStamp": "2019-08-14T18:29:00.001Z",
        "id": "Y00105578",
        "isExpiring": true,
        "isStarted": true,
        "legalText": "$10 OFF On $150",
        "promotionType": "public",
        "status": "available",
        "title": "$40 OFF On $50",
      },
      Object {
        "details": null,
        "detailsOpen": false,
        "effectiveDate": "8/6/19",
        "error": null,
        "expirationDate": "8/10/19",
        "expirationDateTimeStamp": "2019-08-15T18:29:00.001Z",
        "id": "Y00105575",
        "isExpiring": true,
        "isStarted": true,
        "legalText": "$10 OFF On $520",
        "promotionType": "public",
        "status": "available",
        "title": "$50 OFF On $50",
      },
      Object {
        "details": null,
        "detailsOpen": false,
        "effectiveDate": "8/6/19",
        "error": null,
        "expirationDate": "8/10/19",
        "expirationDateTimeStamp": "2019-08-16T18:29:00.001Z",
        "id": "Y00105578",
        "isExpiring": true,
        "isStarted": true,
        "legalText": "$10 OFF On $350",
        "promotionType": "public",
        "status": "available",
        "title": "$60 OFF On $50",
      },
    ]
  }
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bZQynM",
        "isStatic": false,
        "rules": Array [
          "
  ",
          "
  display: flex;
  flex-direction: column;

  .couponList__title {
    margin-bottom: ",
          [Function],
          ";
  }
  .couponList__iconContainer {
    display: flex;
    flex-direction: row;
    margin-top: ",
          [Function],
          ";
  }
  .couponList__helpIcon {
    text-align: center;
    font-size: ",
          [Function],
          ";
    background: ",
          [Function],
          ";
    color: ",
          [Function],
          ";
    margin-right: ",
          [Function],
          ";
    border-radius: ",
          [Function],
          ";
    width: ",
          [Function],
          ";
    height: ",
          [Function],
          ";
  }
",
          ";
",
        ],
      },
      "displayName": "Styled(CouponListSection)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bZQynM",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  heading="Heading"
  labels={Object {}}
/>
`;

exports[`CouponList component should renders available list 1`] = `
<StyledComponent
  className="applied_coupon"
  couponDetailClick={[Function]}
  couponList={
    Immutable.List [
      Object {
        "details": null,
        "detailsOpen": false,
        "effectiveDate": "8/6/19",
        "error": null,
        "expirationDate": "8/10/19",
        "expirationDateTimeStamp": "2019-08-11T18:29:00.001Z",
        "id": "Y00105575",
        "isExpiring": true,
        "isStarted": true,
        "legalText": "$10 OFF On $60",
        "promotionType": "public",
        "status": "available",
        "title": "$10 OFF On $50",
      },
      Object {
        "details": null,
        "detailsOpen": false,
        "effectiveDate": "8/6/19",
        "error": null,
        "expirationDate": "8/10/19",
        "expirationDateTimeStamp": "2019-08-12T18:29:00.001Z",
        "id": "Y00105578",
        "isExpiring": true,
        "isStarted": true,
        "legalText": "$10 OFF On $70",
        "promotionType": "public",
        "status": "available",
        "title": "$20 OFF On $50",
      },
      Object {
        "details": null,
        "detailsOpen": false,
        "effectiveDate": "8/6/19",
        "error": null,
        "expirationDate": "8/10/19",
        "expirationDateTimeStamp": "2019-08-13T18:29:00.001Z",
        "id": "Y00105575",
        "isExpiring": true,
        "isStarted": true,
        "legalText": "$10 OFF On $80",
        "promotionType": "public",
        "status": "available",
        "title": "$30 OFF On $50",
      },
      Object {
        "details": null,
        "detailsOpen": false,
        "effectiveDate": "8/6/19",
        "error": null,
        "expirationDate": "8/10/19",
        "expirationDateTimeStamp": "2019-08-14T18:29:00.001Z",
        "id": "Y00105578",
        "isExpiring": true,
        "isStarted": true,
        "legalText": "$10 OFF On $150",
        "promotionType": "public",
        "status": "available",
        "title": "$40 OFF On $50",
      },
      Object {
        "details": null,
        "detailsOpen": false,
        "effectiveDate": "8/6/19",
        "error": null,
        "expirationDate": "8/10/19",
        "expirationDateTimeStamp": "2019-08-15T18:29:00.001Z",
        "id": "Y00105575",
        "isExpiring": true,
        "isStarted": true,
        "legalText": "$10 OFF On $520",
        "promotionType": "public",
        "status": "available",
        "title": "$50 OFF On $50",
      },
      Object {
        "details": null,
        "detailsOpen": false,
        "effectiveDate": "8/6/19",
        "error": null,
        "expirationDate": "8/10/19",
        "expirationDateTimeStamp": "2019-08-16T18:29:00.001Z",
        "id": "Y00105578",
        "isExpiring": true,
        "isStarted": true,
        "legalText": "$10 OFF On $350",
        "promotionType": "public",
        "status": "available",
        "title": "$60 OFF On $50",
      },
    ]
  }
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bZQynM",
        "isStatic": false,
        "rules": Array [
          "
  ",
          "
  display: flex;
  flex-direction: column;

  .couponList__title {
    margin-bottom: ",
          [Function],
          ";
  }
  .couponList__iconContainer {
    display: flex;
    flex-direction: row;
    margin-top: ",
          [Function],
          ";
  }
  .couponList__helpIcon {
    text-align: center;
    font-size: ",
          [Function],
          ";
    background: ",
          [Function],
          ";
    color: ",
          [Function],
          ";
    margin-right: ",
          [Function],
          ";
    border-radius: ",
          [Function],
          ";
    width: ",
          [Function],
          ";
    height: ",
          [Function],
          ";
  }
",
          ";
",
        ],
      },
      "displayName": "Styled(CouponListSection)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bZQynM",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  heading="Heading"
  helpAnchorClick={[Function]}
  helpSubHeading="true"
  labels={Object {}}
/>
`;
